@@ -1992,7 +1992,7 @@ int status_calc_pc_(struct map_session_data* sd, bool first)
 	status->mode = MD_MASK&~(MD_BOSS|MD_PLANT|MD_DETECTOR|MD_ANGRY);
 
 	status->size = (sd->class_&JOBL_BABY)?0:1;
-	if (battle_config.character_size && pc_isriding(sd,OPTION_RIDING|OPTION_RIDING_DRAGON)) { //[Lupus]
+	if (battle_config.character_size && pc_isriding(sd,OPTION_RIDING|OPTION_RIDING_DRAGON|OPTION_RIDING_WUG|OPTION_MADO)) { //[Lupus]
 		if (sd->class_&JOBL_BABY) {
 			if (battle_config.character_size&2)
 				status->size++;
@@ -4909,6 +4909,18 @@ void status_set_viewdata(struct block_list *bl, int class_)
 					break;
 				case JOB_MECHANIC_T:
 					class_ = JOB_MECHANIC_T2;
+					break;
+				case JOB_BABY_RUNE:
+					class_ = JOB_BABY_RUNE2;
+					break;
+				case JOB_BABY_RANGER:
+					class_ = JOB_BABY_RANGER2;
+					break;
+				case JOB_BABY_MECHANIC:
+					class_ = JOB_BABY_MECHANIC2;
+					break;
+				case JOB_BABY_GUARD:
+					class_ = JOB_BABY_GUARD2;
 					break;
 				}
 				sd->vd.class_ = class_;
